pushing the web page

--- a/client/src/pages/ProfilePage.css
+++ b/client/src/pages/ProfilePage.css
@@ -24,7 +24,7 @@
 }
 .header-part--top {
   height: 140px;               /* whatever height you like */
-  background-color: #A64C3A;   /* your “brown” color */
+  background-color: #fac75c;   /* your “brown” color */
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 }
