--- a/client/src/pages/review/ReviewsPage.css
+++ b/client/src/pages/review/ReviewsPage.css
@@ -106,6 +106,16 @@
   place-items: center;
   font-weight: bold;
   margin-right: 12px;
+  overflow: hidden; /* hide any overflow */
+}
+
+.avatar img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: contain; /* Show full image, may leave empty space */
+  display: block;
+  background: #bbb; /* optional: background color to fill empty space */
 }
 .user-info .name {
   font-weight: bold;
