--- a/admin/src/pages/dashboard/Dashboard.css
+++ b/admin/src/pages/dashboard/Dashboard.css
@@ -30,7 +30,7 @@ body {
 
 .dashboard-header h1 {
   font-size: 2.4rem;
-  color: #22223b;
+  color: #ffffff;
   font-weight: 600;
   margin-bottom: 12px;
 }
@@ -41,7 +41,21 @@ body {
   font-weight: 500;
   margin-bottom: 0;
 }
+.logout-btn {
+  background-color: #7961ff; /* red */
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  margin-top: 16px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 500;
+  transition: background 0.2s ease;
+}
 
+.logout-btn:hover {
+  background-color: #93bcff;
+}
 .dashboard-content {
   display: flex;
   gap: 32px;
